# fingerprints_recognition

./: .gitignore  pyproject.toml
fingerprints_recognition/: Recognizer.py  __main__.py
